--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -3,8 +3,20 @@ $sans: "PT Sans", "Helvetica Neue", Arial, sans-serif !default;
 $serif: "PT Serif", Georgia, Times, "Times New Roman", serif !default;
 $mono: Menlo, Monaco, "Andale Mono", "lucida console", "Courier New", monospace !default;
 $heading-font-family: "PT Serif", "Georgia", "Helvetica Neue", Arial, sans-serif !default;
-$header-title-font-family: $heading-font-family !default;
+$header-title-font-family: "museo_slab500", Arial, sans-serif !default;
 $header-subtitle-font-family: $heading-font-family !default;
+
+@font-face {
+    font-family: 'museo_slab500';
+    src: url('/fonts/Museo_Slab_500_2-webfont.eot');
+    src: url('/fonts/Museo_Slab_500_2-webfont.eot?#iefix') format('embedded-opentype'),
+         url('/fonts/Museo_Slab_500_2-webfont.woff') format('woff'),
+         url('/fonts/Museo_Slab_500_2-webfont.ttf') format('truetype'),
+         url('/fonts/Museo_Slab_500_2-webfont.svg#museo_slab500') format('svg');
+    font-weight: normal;
+    font-style: normal;
+
+}
 
 // Fonts
 .heading {
@@ -161,4 +173,3 @@ article blockquote {
   white-space: pre-wrap;
   word-wrap: break-word;
 }
-
