--- a/sass/partials/_blog.scss
+++ b/sass/partials/_blog.scss
@@ -42,9 +42,16 @@ article {
     font-size: 2.0em; font-style: italic;
     line-height: 1.3em;
   }
-  img, video, .flash-video {
+  video, .flash-video {
     @extend .flex-content;
     @extend .basic-alignment;
+    @include shadow-box;
+  }
+  img {
+    @extend .flex-content;
+    @extend .basic-alignment;
+  }
+  img.bordered {
     @include shadow-box;
   }
   video, .flash-video { margin: 0 auto 1.5em; }
