--- a/source/_includes/custom/head.html
+++ b/source/_includes/custom/head.html
@@ -1,3 +1,15 @@
 <!--Fonts from Google"s Web font directory at http://google.com/webfonts -->
 <link href="//fonts.googleapis.com/css?family=PT+Serif:regular,italic,bold,bolditalic" rel="stylesheet" type="text/css">
 <link href="//fonts.googleapis.com/css?family=PT+Sans:regular,italic,bold,bolditalic" rel="stylesheet" type="text/css">
+
+{% if paginator %}
+  {% for post in paginator.posts %}
+    {% if post.head %}
+      {{ post.head }}
+    {% endif %}
+  {% endfor %}
+{% endif %}
+
+{% if page.head %}
+  {{ page.head }}
+{% endif %}
