--- a/sass/custom/_signup_form.scss
+++ b/sass/custom/_signup_form.scss
@@ -31,11 +31,12 @@
       box-shadow: 0 1px 0 rgba(255, 255, 255, 0.5) inset;
       color: white;
       cursor: pointer;
-      display: inline-block;
+      display: block;
       font-size: 14px;
       font-weight: bold;
       line-height: 1;
-      margin: 8px 0 0 0;
+      margin: 0 auto;
+      margin-top: 10px;
       outline: none;
       padding: 10px 20px 11px;
       position: relative;
@@ -46,4 +47,31 @@
       -o-transition: background-color 0.15s ease-in-out;
       transition: background-color 0.15s ease-in-out;
     }
+}
+
+#mc_embed_signup.landing-page {
+  max-width: 500px;
+  margin: 0 auto;
+  border: 1px solid #ccc;
+  padding: 20px;
+  background-color: rgba(255, 255, 0, 0.3);
+  border-radius: 3px;
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.2), 0 1px 0 rgba(255, 255, 255, 0.5) inset;
+  margin-bottom: 1.5em;
+  font-family: 'Lucida Grande', sans-serif;
+  //box-shadow: 0 1px 0 rgba(255, 255, 255, 0.5) inset;
+
+  // textfield
+  input.email {
+    height: 2em;
+    max-width: 480px;
+    margin-top: 8px;
+    margin-left: 8px;
+    font-size: 18px;
+  }
+
+  input#mc-embedded-subscribe {
+    background-color: #0074D9;
+  }
+
 }
