Added picture to About page

--- a/sass/custom/_styles.scss
+++ b/sass/custom/_styles.scss
@@ -47,3 +47,8 @@
   transition: background-color 0.15s ease-in-out;
   font-family: Helvetica, sans-serif;
 }
+
+.about-image-of-me {
+  float: left;
+  margin-right: 1.2em;
+}
