fix centering of captioned images

--- a/sass/partials/_blog.scss
+++ b/sass/partials/_blog.scss
@@ -65,6 +65,10 @@ article {
       color: #666;
       display: block;
     }
+
+    &.center {
+      text-align: center;
+    }
   }
 
   img.bordered, .caption-wrapper {
