renamed Redesign Twitter App post, fixed styling of before/after images

--- a/sass/custom/_styles.scss
+++ b/sass/custom/_styles.scss
@@ -69,16 +69,14 @@
   }
 }
 
-.img--before {
-  float: left;
-  width: 45%;
-}
+.caption-wrapper {
+  &.img--before {
+    float: left;
+    width: 45%;
+  }
 
-.img--after {
-  float: right;
-  width: 45%;
-
-  &:after {
-    clear: both;
+  &.img--after {
+    float: right;
+    width: 45%;
   }
 }
